# userspace-rcu

./: .gitignore  .gitreview  API.txt  ChangeLog  CodingStyle  CodingStyle.md  LICENSE  LICENSE.md  Makefile  Makefile.am  Makefile.build.inc  Makefile.inc  Makefile64  README  README.md  api.h  api_gcc.h  api_ppc.h  api_x86.h  arch_atomic_ppc.h  arch_atomic_s390.h  arch_atomic_x86.h  arch_ppc.h  arch_s390.h  arch_x86.h  bootstrap  compat-getcpu.h  compat_arch_x86.c  compat_futex.c  compiler.h  configure.ac  debug_yield.patch  index.html  lfstack.c  lgpl-relicensing.md  lgpl-relicensing.txt  params.json  rculfhash-internal.h  rculfhash-mm-chunk.c  rculfhash-mm-mmap.c  (+61 more)
doc/examples/: Makefile.am  Makefile.examples.template
include/: Makefile.am  urcu-bp.h  urcu-call-rcu.h  urcu-defer.h  urcu-flavor.h  urcu-pointer.h  urcu-qsbr.h  urcu.h
include/urcu/: annotate.h  arch.h  assert.h  call-rcu.h  cds.h  compiler.h  config.h.in  debug.h  defer.h  flavor.h  futex.h  hlist.h  lfstack.h  list.h  pointer.h  rcuhlist.h  rcuja.h  rculfhash.h  rculfqueue.h  rculfstack.h  rculist.h  ref.h  syscall-compat.h  system.h  tls-compat.h  uatomic.h  uatomic_arch.h  urcu-bp.h  urcu-futex.h  urcu-mb.h  urcu-memb.h  urcu-poll.h  urcu-qsbr.h  urcu-signal.h  urcu.h  urcu_ref.h  wfcqueue.h  wfqueue.h  wfstack.h
src/: Makefile.am  compat-getcpu.h  compat-rand.h  compat-smp.h  compat_arch.c  compat_futex.c  lfstack.c  liburcu-bp.pc.in  liburcu-cds.pc.in  liburcu-mb.pc.in  liburcu-memb.pc.in  liburcu-qsbr.pc.in  liburcu-signal.pc.in  liburcu.pc.in  rcuja-internal.h  rcuja-shadow-nodes.c  rcuja.c  rculfhash-internal.h  rculfhash-mm-chunk.c  rculfhash-mm-mmap.c  rculfhash-mm-order.c  rculfhash.c  rculfqueue.c  rculfstack.c  urcu-bp.c  urcu-call-rcu-impl.h  urcu-defer-impl.h  urcu-die.h  urcu-flavor.h  urcu-pointer.c  urcu-pointer.h  urcu-poll-impl.h  urcu-qsbr.c  urcu-qsbr.h  urcu-utils.h  urcu-wait.h  urcu.c  urcu.h  wfcqueue.c  wfqueue.c  (+3 more)
tests/: Makefile  Makefile.am  Makefile.inc  Makefile32  Makefile64  api.h  api_gcc.h  api_ppc.h  api_x86.h  cpuset.h  rcutorture.h  runall.sh  runhash.sh  runpaul-phase7.sh  runtests-batch.sh  runtests.sh  subphase4.sh  test_atomic.c  test_cycles_per_loop.c  test_ht.c  test_looplen.c  test_mutex.c  test_perthreadlock.c  test_perthreadlock_timing.c  test_qsbr.c  test_qsbr_gc.c  test_qsbr_timing.c  test_rwlock.c  test_rwlock_timing.c  test_uatomic.c  test_urcu.c  test_urcu_assign.c  test_urcu_bp.c  test_urcu_defer.c  test_urcu_fork.c  test_urcu_gc.c  test_urcu_hash.c  test_urcu_hash.h  test_urcu_hash_rw.c  test_urcu_hash_unique.c  (+19 more)
tests/benchmark/: Makefile.am  common-states.c  common-states.h  common.sh  hashtable_1_seconds.tap  hashtable_30_seconds.tap  hashtable_3_seconds.tap  long_bench_tests  regression_tests  run-urcu-tests.sh  runhash.sh  runpaul-phase1.sh  runpaul-phase2.sh  runpaul-phase3.sh  runpaul-phase4.sh  runpaul-phase5.sh  runpaul-phase6.sh  runpaul-phase7.sh  runtests-batch.sh  runtests.sh  short_bench_tests  subphase4.sh  test_barrier.c  test_cycles_per_loop.c  test_looplen.c  test_mutex.c  test_perthreadlock.c  test_perthreadlock_timing.c  test_rwlock.c  test_rwlock_timing.c  test_uatomic.c  test_urcu.c  test_urcu_assign.c  test_urcu_bp.c  test_urcu_defer.c  test_urcu_gc.c  test_urcu_hash.c  test_urcu_hash.h  test_urcu_hash_rw.c  test_urcu_hash_unique.c  (+14 more)
tests/common/: Makefile.am  api.h  cpuset.h  debug-yield.c  debug-yield.h  thread-id.h
tests/regression/: Makefile.am  rcutorture.h  rcutorture_urcu_bp_perf_global.tap.in  rcutorture_urcu_bp_perf_global_cxx.tap.in  rcutorture_urcu_bp_perf_percpu.tap.in  rcutorture_urcu_bp_perf_percpu_cxx.tap.in  rcutorture_urcu_bp_perf_perthread.tap.in  rcutorture_urcu_bp_perf_perthread_cxx.tap.in  rcutorture_urcu_bp_rperf_global.tap.in  rcutorture_urcu_bp_rperf_global_cxx.tap.in  rcutorture_urcu_bp_rperf_percpu.tap.in  rcutorture_urcu_bp_rperf_percpu_cxx.tap.in  rcutorture_urcu_bp_rperf_perthread.tap.in  rcutorture_urcu_bp_rperf_perthread_cxx.tap.in  rcutorture_urcu_bp_stress_global.tap.in  rcutorture_urcu_bp_stress_global_cxx.tap.in  rcutorture_urcu_bp_stress_percpu.tap.in  rcutorture_urcu_bp_stress_percpu_cxx.tap.in  rcutorture_urcu_bp_stress_perthread.tap.in  rcutorture_urcu_bp_stress_perthread_cxx.tap.in  rcutorture_urcu_bp_uperf_global.tap.in  rcutorture_urcu_bp_uperf_global_cxx.tap.in  rcutorture_urcu_bp_uperf_percpu.tap.in  rcutorture_urcu_bp_uperf_percpu_cxx.tap.in  rcutorture_urcu_bp_uperf_perthread.tap.in  rcutorture_urcu_bp_uperf_perthread_cxx.tap.in  rcutorture_urcu_mb_perf_global.tap.in  rcutorture_urcu_mb_perf_global_cxx.tap.in  rcutorture_urcu_mb_perf_percpu.tap.in  rcutorture_urcu_mb_perf_percpu_cxx.tap.in  rcutorture_urcu_mb_perf_perthread.tap.in  rcutorture_urcu_mb_perf_perthread_cxx.tap.in  rcutorture_urcu_mb_rperf_global.tap.in  rcutorture_urcu_mb_rperf_global_cxx.tap.in  rcutorture_urcu_mb_rperf_percpu.tap.in  rcutorture_urcu_mb_rperf_percpu_cxx.tap.in  rcutorture_urcu_mb_rperf_perthread.tap.in  rcutorture_urcu_mb_rperf_perthread_cxx.tap.in  rcutorture_urcu_mb_stress_global.tap.in  rcutorture_urcu_mb_stress_global_cxx.tap.in  (+211 more)
tests/unit/: Makefile.am  get_cpu_mask_from_sysfs.c  get_cpu_mask_from_sysfs_cxx.cpp  get_max_cpuid_from_sysfs.c  get_max_cpuid_from_sysfs_cxx.cpp  run.sh  test_arch.c  test_arch_cxx.cpp  test_build.c  test_build_cxx.cpp  test_get_cpu_mask_from_sysfs  test_get_cpu_mask_from_sysfs_cxx  test_get_max_cpuid_from_mask.c  test_get_max_cpuid_from_mask_cxx.cpp  test_get_max_cpuid_from_sysfs  test_get_max_cpuid_from_sysfs_cxx  test_get_possible_cpus_array_len.c  test_get_possible_cpus_array_len_cxx.cpp  test_lfstack.c  test_loop  test_uatomic.c  test_uatomic_cxx.cpp  test_urcu_multiflavor-bp.c  test_urcu_multiflavor-bp_cxx.cpp  test_urcu_multiflavor-mb.c  test_urcu_multiflavor-mb_cxx.cpp  test_urcu_multiflavor-memb.c  test_urcu_multiflavor-memb_cxx.cpp  test_urcu_multiflavor-qsbr.c  test_urcu_multiflavor-qsbr_cxx.cpp  test_urcu_multiflavor-signal.c  test_urcu_multiflavor-signal_cxx.cpp  test_urcu_multiflavor.c  test_urcu_multiflavor.h  test_urcu_multiflavor_cxx.cpp  test_wfcqueue.c  (+7 more)
(+590 files in other folders)
